<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="64sp"
        app:fontFamily="@font/alexandria"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/tap_to_begin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tap_to_begin"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:fontFamily="@font/alexandria"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.832" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/temp_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.385" />
</androidx.constraintlayout.widget.ConstraintLayout>